Created a pair component

--- a/vacation/src/components/header/Header.css
+++ b/vacation/src/components/header/Header.css
@@ -4,5 +4,5 @@
     text-align: center;
     overflow: hidden;
     background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(40,182,187,1) 44%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgb(3, 37, 160) 0%, rgb(40, 187, 40) 44%, rgb(255, 30, 0) 100%);
 }
