--- a/vacation/src/components/pairGenerator/PairGenerator.css
+++ b/vacation/src/components/pairGenerator/PairGenerator.css
@@ -3,13 +3,14 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 100%;
+    width: 50%;
 }
 
 .PairGenerator-Pairs {
     display: flex;
     justify-content: space-around;
     padding: 10px;
+    flex-wrap: wrap;
 }
 
 .PairGenerator-Button-Container {
